# AIResume

./: LICENSE
backend/: docker-compose.yml  pyproject.toml
backend/conf/: settings.toml
backend/src/: app.py  config.py  db.py  guided_gen.py  models.py
backend/src/cli/: ingest.py
backend/src/db/: db.py  models.py
backend/src/llm/kie/: guided_gen.py
backend/src/llm/rag/: rag.py
backend/src/utils/: image_utils.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/api/: client.ts  data_objects.ts
frontend/src/components/: Page.svelte
frontend/src/components/resume/: EducationItem.svelte  ExperienceItem.svelte  ResumeDetailOverview.svelte  ResumeGeneralInfo.svelte  SkillItem.svelte
frontend/src/components/sidebar/: SideBar.svelte  SideBarTile.svelte
frontend/src/lib/: query-client.ts
frontend/src/lib/stores/: selectedResume.ts
frontend/src/routes/: +page.svelte
